# gitignore-builder

./: .autoflake.cfg  .black  .env  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml
src/gitignore_builder/: __about__.py  __main__.py  builder.py  config.py  datamodel.py  io_util.py  util.py
src/gitignore_builder/cli/: __init__.py
src/gitignore_builder/config/: __init__.py  api.py  recipes.py  templates.py
tests/: abstract_tests.py  test_builder.py  test_cli.py  test_config.py  test_config_api.py  test_datamodel.py  test_io_util.py  test_recipes.py  test_templates.py  test_util.py
